[package]
name = "tst-pg3-async"
version = "0.1.0"
authors = ["julioisaias <julioisaias@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.2.0", features = ["full"] }
tokio-postgres = "0.7.0"
chrono = "0.4.19"
